--- a/src/scss/components/_hamburgermenu.scss
+++ b/src/scss/components/_hamburgermenu.scss
@@ -91,7 +91,7 @@
         justify-content: space-between;
         align-items: center;
         position: relative;
-        top: 170px;
+        top: 120px;
         padding: 0 116px;
         width: 100%;
         @media (max-width: 756px) {
@@ -119,8 +119,8 @@
               width: 700px;
 
               @media (max-width:756px){
-                font-size: 2.5rem;
-                height: 100px;
+                font-size: 1.3rem;
+                height: 60px;
               }
 
               a {
@@ -138,8 +138,10 @@
           color: var(--text-color);
           width: 300px;
           h3 {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             margin: 8px auto;
+            font-style: italic;
+            font-weight: 400;
           }
           p {
             margin: 0 auto;
