--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -125,5 +125,12 @@
   
   .contact div div h2 {
     font-size: 2rem;
+    text-align: center;
     width: 350px;
+  }
+
+  .coco {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
