--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,10 +6,11 @@
 @import "components/header";
 @import "components/home";
 @import "components/project";
-@import "components/about";
+@import "components/biography";
 @import "components/contact";
 @import "components/hamburgermenu";
 @import "components/projectdetails";
+@import "components/academic";
 @import "components/loader";
 @import "components/footer";
 // src/styles/styles.scss
