--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px 20px;
+  padding: 50px 0 0 0;
   position: relative;
   
   @media (max-width: 768px) {
@@ -26,8 +26,8 @@
     z-index: 9999;
     gap: 15px;
     position: absolute;
-    top: 100%;
-    right: 50px;
+    top: 50%;
+    right: 20px;
     align-items: flex-end;
     
     a {
