--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "components/home";
 @import "components/project";
 @import "components/biography";
+@import "components/project1";
 @import "components/contact";
 @import "components/hamburgermenu";
 @import "components/projectdetails";
