--- a/src/scss/components/_biography.scss
+++ b/src/scss/components/_biography.scss
@@ -14,7 +14,7 @@
     }
 
     @media (max-width:1025px) {
-      padding: 0rem 2rem;
+      padding: 30px;
       display: flex;
       flex-direction: column;
       align-items: center;
