--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -48,6 +48,14 @@
   }
 }
 
+.barbut {
+  position: fixed;
+  right: 0;
+  z-index: 9999;
+  width: 8rem;
+  display: flex;
+  justify-content: center;
+}
 
 /* Optional: Adjust the logo style */
 .logo-animation {
