--- a/src/scss/components/_academic.scss
+++ b/src/scss/components/_academic.scss
@@ -70,6 +70,8 @@
 .project-section .project-items .project-item a {
     display: flex;
     flex-direction: column;
+    color: var(--text-color);
+    max-width: 350px;
     justify-content: center;
     align-items: center;
 }
@@ -181,7 +183,7 @@
   .project-item .nt2 {
     color: var(--text-color);
     font-size: 1rem;
-    max-width: 400px;
+    max-width: 350px;
     display: flex;
     flex-direction: column;
   }
