--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -23,8 +23,8 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      height: 60px;
-      width: 480px;
+      height: 10vh;
+      width: 380px;
       font-size: 20px;
       overflow: hidden;
       font-weight: 800;
@@ -46,8 +46,12 @@
 
 .texts-container span {
   font-size: 24px;
+  width: 13vh;
   font-family: "'Poiret One'", serif !important;
   font-weight: 200;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 
   @media (max-width: 768px) {
     font-size: 18px;
