--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -174,6 +174,7 @@
   .toggle-writeup {
     display: flex;
     align-items: center;
+    color: var(--text-color);
     gap: 0.5rem;
     font-size: 1rem;
     font-family: 'All Round Gothic';
@@ -233,6 +234,7 @@
   
   .frugle {
     font-size: 0.8rem;
+    color: var(--text-color);
     background-color: var(--secondary-color) !important;
   }
   
