--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -42,9 +42,11 @@
   }
 }
 
+
 @media (max-width: 768px) {
   .nav-links {
     display: none; /* Hide on smaller screens */
+    opacity: 0;
   }
 }
 
