--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -23,6 +23,10 @@
   .formstudio {
     height: auto;
     width: 10rem;
+
+    @media (max-width:480px) {
+      width: 7rem;
+    }
   }
 
   .nav-links {
