--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -31,6 +31,11 @@
     margin-left: 15px;
     font-size: 1.2em;
     transition: color 0.3s;
+
+    @media (max-width:430px) {
+      margin-left: 7px;
+      font-size: 0.9em;
+    }
   }
   
   .footer-icons a:hover {
