--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -274,6 +274,8 @@
   .about-section {
     @media (max-width: 756px) {
       padding: 0px 50px 0;
+      display: flex;
+      justify-content: center;
     }
   }
   
