--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -306,18 +306,16 @@
     max-width: 600px;
     text-wrap: wrap;
     
-  @media (min-width: 480px) {
+  @media (max-width: 480px) {
     font-size: 0.8rem;
     max-width: 350px;
+    color: darkgrey;
+  }
+
   }
   
-  }
   
   
-  
-  
-  @media (min-width: 756px) {
-    
   
   @keyframes slideFadeIn {
     from {
@@ -365,4 +363,4 @@
   .triggered {
     opacity: 1; /* Keeps the element visible after the animation */
   }
-  }
+  
