--- a/src/scss/components/_project1.scss
+++ b/src/scss/components/_project1.scss
@@ -541,7 +541,7 @@ ul li {
 
 
   .category-dropdown {
-    display: flex;
+    display: none;
     align-items: center;
     margin-bottom: 20px;
     position: relative;
