--- a/src/scss/components/_project1.scss
+++ b/src/scss/components/_project1.scss
@@ -54,6 +54,7 @@
         align-items: flex-start;
         flex-direction: column;
         text-align: left;  
+        animation: fade-up 2s;
         
         @media (max-width:768px) {
             width: 100%;
@@ -434,77 +435,6 @@ ul li {
     animation: fadeIn 0.3s ease-in-out;
   }
   
-  @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-  }
-  
-
-  
-
-
-
-
-
-
-
-
-
-
-
-/* Base fade-in setup for all sections */
-.fade-section, .fade-left-section, .fade-right-section {
-  opacity: 0;
-  transition: opacity 1s ease, transform 1s ease; /* Smooth transition */
-}
-
-/* Slide in from right */
-@keyframes slideFadeInRight {
-  0% {
-    transform: translateX(120px); /* Start slightly to the right */
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0); /* Slide in to original position */
-  }
-}
-
-.slideFadeInRight {
-  animation: slideFadeInRight 1.5s ease-in-out forwards;
-}
-
-/* Slide in from left */
-@keyframes slideFadeInLeft {
-  0% {
-    transform: translateX(-120px); /* Start slightly to the left */
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0); /* Slide in to original position */
-  }
-}
-
-.slideFadeInLeft {
-  animation: slideFadeInLeft 1s ease-in-out forwards;
-}
-
-/* Default fade-in */
-@keyframes slideFadeIn {
-  100% {
-    opacity: 1;
-  }
-}
-
-.slideFadeIn {
-  animation: slideFadeIn 1s ease-in-out forwards;
-}
-
-/* Staggered animation delays */
-.fade-delay-0 { animation-delay: 0s; }
-.fade-delay-1 { animation-delay: 0.2s; }
-.fade-delay-2 { animation-delay: 0.4s; }
-/* Add more as needed */
-
 
   .category-dropdown {
     display: none;
@@ -550,8 +480,3 @@ ul li {
   }
   
  
-
-  .fade-in {
-    animation: fadeIn 0.8s ease-in-out forwards;
-    opacity: 1; /* Ensure final state is visible */
-  }
